update due transactions